update texts from areas-prioritarias

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -120,7 +120,7 @@
     primeiro mapa de áreas prioritárias para a conservação da flora ameaçada no Brasil. Daniele
     adora viajar, fotografia e edição de vídeos, além de praticar mergulho e stand-up paddle.<br/>
     <strong><a href="http://lattes.cnpq.br/7089890791632018" target="_blank">Currículo lattes</a></strong><br />
-    <strong>Email:</strong> da_vilanova@ufg.br<br/>
+    <strong>Email:</strong> daniele@cncflora.net<br/>
     </p>
 </div>
 <div class="item">
