--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -1,51 +1,53 @@
 <h3>Núcleo Planejamento Espacial para Conservação</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <div class="banner-full"><img src="{{static_url}}/images/projetos/areas/areas-prioritarias-capa.jpg" /></div>
-  <p>Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de
-  espécies ameaçadas de extinção é uma ferramenta que indica quais plantas devem receber,
-  prioritariamente, atenção por parte dos tomadores de decisão e da sociedade, sob pena de não
-  estarem disponíveis para a geração futura, gerando perda de serviços ecossistêmicos caso não
-  recebam a atenção devida. Porém, a lista não indica onde é preciso agir. É preciso elaborar
-  documentos que guiem ações de conservação em locais estratégicos, visando impedir ou reverter
-  o declínio populacional de espécies.</p>
-  <p>Com essa motivação, no início de 2014, foi instituído o Programa Nacional de Conservação das
-  Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de
-  Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para
-  conservação da flora. A partir dessa atribuição foi desenvolvido o núcleo Áreas prioritárias para
-  conservação e uso sustentável da flora brasileira ameaçada de extinção que tem como objetivo
-  indicar áreas prioritárias para conservação e uso sustentável em todo o território nacional, para
-  que o Brasil diminua o risco de extinção das espécies da flora.</p>
-  <p>O núcleo é uma parceria entre o CNCFlora e o Laboratório de Bioeografia da Conservação
-  (CB-Lab) da Universidade Federal de Goiás, dirigido pelo Prof. Rafael Loyola. O projeto é
-  caracterizado por fornecer instrumentos para elaboração de políticas públicas, direcionando ações
-  de conservação para áreas que facilitariam o alcance das Metas 11 e 12 do Plano Estratégico
-  para a Conservação da Biodiversidade de Aichi – da Convenção sobre Diversidade Biológica,
-  até 2020. Além disso, o projeto visa direcionar políticas para o cumprimento das Metas 5 e 7 da
-  Estratégia Global para a Conservação de Plantas – GSPC.</p>
-  <br/><strong>As áreas prioritárias</strong>
+
+  <h4>As áreas prioritárias</h4>
+
   <p>
     <a href="{{static_url}}/images/projetos/areas/mapa.png" target="_blank"><div class="banner-m"><img src="{{static_url}}/images/projetos/areas/mapa.png"/></div></a>
-    Os mapas com áreas prioritárias possuem diferenciais em relação a outras estratégias e indicações
-    de áreas prioritárias já realizadas em âmbito nacional. Primeiramente, eles consideram e visam
-    minimizar conflitos com as principais ameaças às plantas hoje em dia, a saber, a mineração,
-    a expansão agropecuária e a urbanização. Além disso, são apresentados recortes de áreas
-    prioritárias, de forma que uma extensão bem menor de cada bioma é indicada como prioritária,
-    quando comparado a outras estratégias.</p>
-    <p>Todos os biomas foram contemplados e há prioridades em locais-chave para conservar espéies
-    ameaçadas, mas que não são visados para mineração e agricultura atualmente. Além disso, as
-    áreas indicadas no livro complementam o papel importantíssimo já desempenhado por Unidades
-    de Conservação e Terras Indígenas existentes, fornecendo o melhor cenário possível para
-    a negociação com outros setores sobre como implementar ações de conservação para essas
-    espécies. Finalmente, a publicação apresenta outros recortes de priorização, indicando um
-    portfolio de opções para tomadores de decisão e negociadores internacionais.</p>
-    <p>O projeto conta com recursos do Fundo Mundial Para o Meio Ambiente – GEF (Global
-    Environment Facility), articulado com o Banco Mundial por meio do Projeto Nacional de Ações
-    Integradas Público-Privadas para a Biodiversidade – Probio II.</p>
+  </p>
+
+  <p>
+  O Núcleo Planejamento Espacial para Conservação é coordenado pelo Prof. Rafael Loyola, diretor do Laboratório de Biogeografia da Conservação (CB-Lab), da Universidade Federal de Goiás. O CB-Lab tem reputação internacional como fornecedor de soluções fortemente amparadas pela Ciência para suporte à tomada de decisão ambiental no Brasil.
+  </p>
+  
+  <p>
+  Uma vez que a lista vermelha de espécies ameaçadas indica as espécies que requerem atenção especial, com diferentes níveis de urgência, mas não indica onde é preciso agir, é necessário elaborar estratégias e documentos que guiem ações de conservação em locais críticos, visando impedir ou reverter o desaparecimento de espécies. Com essa motivação foi instituído o Programa Nacional de Conservação das Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para conservação da flora. A partir dessa atribuição, a parceria com o CB-Lab e a equipe liderada pelo Prof. Loyola tornou-se um caminho natural. 
+  </p>
+  
+  <p>
+  O Núcleo Planejamento Espacial para Conservação tem um papel central na definição de áreas prioritárias tanto em âmbito nacional, quanto regionalmente. A equipe do núcleo é responsável pela definição das áreas prioritárias para conservação e uso sustentável da flora ameaçada do Brasil, assim como pela execução de todas as análises espaciais e definição de prioridades para o planejamento de ações nos Planos de Ação Nacional (PANs) elaborados pelo CNCFlora.
+  </p>
+  
+  <p>
+  Além disso, o Núcleo é responsável pela avaliação da eficiência das Unidades de Conservação (UCs) do Estado do Rio de Janeiro, tanto em termos espaciais (representação de espécies ameaçadas nas UCs), quanto em termos de gestão, por meio de uma avaliação dos planos de manejo das UCs que abrigam espécies endêmicas e ameaçadas da flora.
+  </p>
+  
+  <p>
+  Até o momento, o núcleo participou da elaboração e execução das seguintes publicações:
+  </p>
+  
+  
+  <p>
+  </p>
+  
+  <h4>
+  </h4>
+  
+  <p>
+  </p>
+  
+  <h4>
+  </h4>
+  
+  <p>
   </p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
   <h3>Produtos</h3>
+
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
@@ -60,9 +62,47 @@
       </div>
     </div>
     <p>
-      O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020. A Meta 11 prevê que 17% das áreas terrestres e marinhas de cada país devem estar protegidas para a conservação da biodiversidade até 2020. Além disso, o mapa direciona políticas para o cumprimento das metas 5 e 7 da Estratégia Global para a Conservação de Plantas (GSPC). 
+  O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020. Além disso, o mapa direciona políticas para o cumprimento das metas 5 e 7 da Estratégia Global para a Conservação de Plantas (GSPC). As áreas indicadas no livro complementam o papel importantíssimo já desempenhado por Unidades de Conservação e Terras Indígenas existentes, fornecendo o melhor cenário possível para a negociação com outros setores sobre como implementar ações de conservação para essas espécies. Finalmente, a publicação apresenta outros recortes de priorização, indicando um portfolio de opções para tomadores de decisão e negociadores internacionais.
     </p>
+  </div>
+  <br clear='all' />
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
+          <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>
+            Plano de Ação Nacional para a conservação do Faveiro-de-Wilson (Dimorphandra wilsonii Rizzini)
+            </p>
+          </div>
+        </a>
+      </div>
     </div>
+    <p>
+  O Plano de Ação Nacional do Faveiro-de-Wilson foi elaborado porque essa espécie, endêmica de Minas Gerais, está Criticamente em perigo (CR) de extinção e, principalmente, por ter muita informação já disponível, o que permitiu elaborar ações efetivas para a espécie e seu habitat. O PAN contém a melhor informação disponível sobre a espécie, além do planejamento de ações necessárias para sua conservação.
+    </p>
+  </div>
+  <br clear='all' />
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+            <a href=""  data-toggle="modal" data-target="#breve-one">
+            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+            Plano de Ação Nacional para a conservação da flora ameaçada do Espinhaço Meridional
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <p>
+  Nos PANs em geral, e nesse, em particular, a indicação de áreas prioritárias é um elemento centralizador e que facilita a elaboração e execução de inúmeras ações de conservação. Os mapas com áreas prioritárias dos PANs foram desenhados com o objetivo de direcionar ações e garantir o melhor retorno possível de investimento em conservação, ou seja, eles são otimizados para ajudar a salvar mais espécies com menos ações e locais quanto possíveis. As análises possuem, portanto, diferenciais em relação a outras estratégias e indicações de áreas prioritá
+    </p>
+  </div>
 
   </div>
 
@@ -73,7 +113,7 @@
       <div class="item">
         <img src="{{static_url}}/images/equipe/rafael.jpg"/>
         <p><strong>Rafael Loyola</strong>
-        é mineiro, doutor em Ecologia pela UNICAMP e Mestre em Ecologia, Conservação e Manejo da Vida Silvestre pela UFMG. É bolsista de produtividade em pesquisa do CNPq e professor do Departamento de Ecologia da UFG. Coordena o Laboratório de Biogeografia da Conservação (CB-Lab) que busca entender os efeitos das mudanças globais sobre a distribuição da biodiversidade no planeta e oferecer soluções científicas para suporte à tomada de decisão ambiental no Brasil.
+        Rafael Loyola é doutor em Ecologia pela UNICAMP e Mestre em Ecologia, Conservação e Manejo da Vida Silvestre pela UFMG. É bolsista de Produtividade em Pesquisa nível 1D do CNPq e professor do Departamento de Ecologia da UFG. Coordena o Laboratório de Biogeografia da Conservação (CB-Lab) que busca entender os efeitos das mudanças globais sobre a distribuição da biodiversidade no planeta e oferecer suporte científico à tomada de decisão ambiental no Brasil. O CB-Lab tem influenciado a elaboração de políticas públicas para a conservação, atuando formalmente junto ao Ministério do Meio Ambiente (MMA), o Centro Nacional de Conservação da Flora (CNCFlora), o Instituto Chico Mendes de Conservação da Biodiversidade (ICMBio) e diferentes ONGs e fundações no Brasil. Atualmente, é Coordenador da sub-rede de Biodiversidade e Ecossistemas da Rede Brasileira de Pesquisas em Mudanças Climáticas Globais (RedeCLIMA/MCTi) e Coordenador do Núcleo de Planejamento Espacial para a Conservação do CNCFlora. Rafael é editor associado dos periódicos Diversity and Distributions, Conservation Letters, PLoS ONE, Biological Conservation, BMC Ecology e editor-chefe do periódico Natureza &amp; Conservação. É assessor científico de inúmeros periódicos e órgãos de fomento internacionais e nacionais. Autor de mais de 100 publicações científicas, Rafael é também ganhador do Grande Prêmio Capes de Tese 2009, que premia a melhor tese de doutorado do Brasil na grande área de Ciências Biológicas, Agrárias e Médicas. Desde 2014, é membro da Rede de Especialistas em Conservação da Natureza e colunista do jornal O Eco, atuando em divulgação, comunicação e educação científica.
         <br/>
           <strong>Email:</strong> rdiasloyola@gmail.com<br/>
           <a href="http://lattes.cnpq.br/7649189080736923">Currículo lattes</a></p>
@@ -87,7 +127,7 @@
           faz pós-doutorado, sob a supervisão de Rafael Loyola, e auxilia o CNCFlora a desenvolver o
           primeiro mapa de áreas prioritárias para a conservação da flora ameaçada no Brasil. Daniele
           adora viajar, fotografia e edição de vídeos, além de praticar mergulho e stand-up paddle.<br/>
-          <strong>Email:</strong> da_vilanova@ufg.br<br/>
+          <strong>Email:</strong> daniele@cncflora.net<br/>
           <a href="http://lattes.cnpq.br/7089890791632018" target="_blank">Currículo lattes</a></p>
         </div>
         <div class="item">
