--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -24,11 +24,7 @@
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento Espacial para Conservação</a></h4>
     <p>
-    No início de 2014, foi instituído o Programa Nacional de Conservação das Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para conservação da flora. A partir dessa atribuição foi desenvolvido o projeto Áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de extinção que tem como objetivo indicar áreas prioritárias para conservação e uso sustentável em todo o território nacional, para que o Brasil diminua o risco de extinção das espécies da flora.
-
-    <!--
-      Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de espécies ameaçadas de extinção é uma ferramenta que indica quais plantas devem receber, prioritariamente, atenção por parte dos tomadores de decisão e da sociedade, sob pena de não estarem disponíveis para a geração futura, gerando perda de serviços ecossistêmicos caso não recebam a atenção devida. Porém, a lista não indica onde é preciso agir. É preciso elaborar documentos que guiem ações de conservação em locais estratégicos, visando impedir ou reverter o declínio populacional de espécies.
-      -->
+    O Núcleo Planejamento Espacial para Conservação tem um papel central na definição de áreas prioritárias tanto em âmbito nacional, quanto regionalmente. A equipe do núcleo é responsável pela definição das áreas prioritárias para conservação e uso sustentável da flora ameaçada do Brasil, assim como pela execução de todas as análises espaciais e definição de prioridades para o planejamento de ações nos Planos de Ação Nacional (PANs) elaborados pelo CNCFlora.
     </p>
   </div>
 </div>
