added missing text

--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -9,7 +9,7 @@
   </p>
 
   <p>
-  O Núcleo Planejamento Espacial para Conservação é coordenado pelo Prof. Rafael Loyola, diretor do Laboratório de Biogeografia da Conservação (CB-Lab), da Universidade Federal de Goiás. O CB-Lab tem reputação internacional como fornecedor de soluções fortemente amparadas pela Ciência para suporte à tomada de decisão ambiental no Brasil.
+  O Núcleo Planejamento Espacial para Conservação é coordenado pelo Prof. Rafael Loyola, diretor do <a href='http://rdloyola.wix.com/cblab'>Laboratório de Biogeografia da Conservação (CB-Lab)</a>, da Universidade Federal de Goiás. O CB-Lab tem reputação internacional como fornecedor de soluções fortemente amparadas pela Ciência para suporte à tomada de decisão ambiental no Brasil.
   </p>
   
   <p>
@@ -103,8 +103,45 @@
   Nos PANs em geral, e nesse, em particular, a indicação de áreas prioritárias é um elemento centralizador e que facilita a elaboração e execução de inúmeras ações de conservação. Os mapas com áreas prioritárias dos PANs foram desenhados com o objetivo de direcionar ações e garantir o melhor retorno possível de investimento em conservação, ou seja, eles são otimizados para ajudar a salvar mais espécies com menos ações e locais quanto possíveis. As análises possuem, portanto, diferenciais em relação a outras estratégias e indicações de áreas prioritá
     </p>
   </div>
-
+  <br clear='all' />
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+            <a href=""  data-toggle="modal" data-target="#breve-one">
+            <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+Plano de Ação Nacional para a conservação da flora ameaçada de Francisco Sá e Grão Mogol
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <p>
+    Como dito anteriormente, as análises espaciais elaboradas pelo Núcleo tem um papel principal nos PANs. Os mapas com áreas prioritárias nesse PAN também foram desenhados com o objetivo de direcionar ações e garantir o melhor retorno possível de investimento em conservação.
+    </p>
   </div>
+  <br clear='all' />
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+          <a href=""  data-toggle="modal" data-target="#breve-one">
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+            Plano de Ação Nacional para a conservação da flora ameaçada do Alto Tocantins
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <p>
+    Assim com nos PANs anteriores, os mapas com áreas prioritárias nesse PAN também foram desenhados com o objetivo de direcionar ações e garantir o melhor retorno possível de investimento em conservação. 
+    </p>
+  </div>
+
+</div>
 
   <div class="box-section col-sm-12 col-md-12 col-lg-12">
     <br/>
