added bgci partner

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -199,11 +199,16 @@
 				</section>
 
         <div class='logos 6u parceiros link parceiros col-sm-6 col-md-6 col-lg-6'>
-          <p>Colaboradores:</p>
+          <p>Parceiros:</p>
           <ul>
             <li>
               <a href="http://iucn.org">
                 <img class="img-1" src="{{static_url}}/images/logos/iucn.jpg" />
+              </a>
+            </li>
+            <li>
+              <a href="http://bgci.org">
+                <img class="img-1" src="{{static_url}}/images/logos/bgci.jpg" />
               </a>
             </li>
             <li>
