Fix report names

--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -27,7 +27,7 @@
       <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Espinhaco_Meridional.pdf">
         <img src="{{static_url}}/images/documentos/relatorio/relatorio1.jpg"/>
         <div class="portfolio-overlay">
-          <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó .</p>
+          <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó, MG.</p>
         </div>
       </a>
     </div>
@@ -46,10 +46,10 @@
 
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="{{static_url}}/pdf/relatorios/Relatorio_Expedica_Diamantina_Final.pdf">
+        <a href="{{static_url}}/pdf/relatorios/Relatorio_Expedicao_Diamantina.pdf">
         <img src="{{static_url}}/images/documentos/relatorio/relatorio3.jpg"/>
         <div class="portfolio-overlay">
-          <p>Relatorio Expedicao Diamantina Final.</p>
+            <p>Relatório de Campo Espinhaço Meridional-Diamantina, MG.</p>
         </div>
       </a>
     </div>
@@ -62,7 +62,7 @@
         <div class="portfolio-overlay">
             <p style="font-size:medium; line-height:1.65em">Reunião sobre o projeto: Unidades de Conservação do Estado do
             Rio de Janeiro: análises e estratégias para conservação da flora
-            endêmica ameaçada</p> 
+            endêmica ameaçada.</p> 
         </div>
       </a>
     </div>
