Changed report from "documentos-norteadores" to "relatorios".

--- a/templates/content/pt-br/document/documentos-norteadores.html
+++ b/templates/content/pt-br/document/documentos-norteadores.html
@@ -5,7 +5,7 @@
   <a href="{{static_url}}/pdf/portaria_mma_443_2014.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/noteadores443.png"/>
 <div class="portfolio-overlay">
-    <p>
+    <p style="font-size:large">
     PORTARIA MMA N º 443, DE 17 DE DEZEMBRO DE 2014
     - Lista Oficial das Espécies da Flora Brasileira Ameaçada de Extinção.
 
@@ -76,17 +76,6 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/relatorio_Workshop.pdf">
-    <img src="{{static_url}}/images/documentos/norteadores/norteadores6.jpg"/>
-<div class="portfolio-overlay">
-    <p>RELATÓRIO Workshop Desenvolvimento Econômico e Conservação.</p>
-
-</div>
-</a>
-</div>
-</div>
-<div class="col-sm-3 col-md-3 col-lg-3">
-<div class="img">
   <a href="{{static_url}}/pdf/documentos/Instrucao_Normati.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores7.jpg"/>
 <div class="portfolio-overlay">
@@ -100,7 +89,7 @@
 <div class="img">
   <a href="http://jr.iucnredlist.org/documents/RedListGuidelines.pdf"><img src="{{static_url}}/images/documentos/publicacoes/publicacoes6.jpg"/>
 <div class="portfolio-overlay">
-    <p>Guidelines for appropriate uses of IUCN Red List Data</p>
+    <p>Guidelines for appropriate uses of IUCN Red List Data.</p>
 </div>
 </a>
 </div>
