--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -67,5 +67,16 @@
       </a>
     </div>
   </div>
+  <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+          <a href="{{static_url}}/pdf/documentos/relatorio_Workshop.pdf">
+              <img src="{{static_url}}/images/documentos/norteadores/norteadores6.jpg"/>
+              <div class="portfolio-overlay">
+                  <p style="font-size:large">Relatório do Workshop Desenvolvimento Econômico e Conservação da Diversidade de Plantas.</p>
+
+              </div>
+          </a>
+      </div>
+  </div>
 
 </div>
