--- a/templates/content/pt-br/document/documentos-norteadores.html
+++ b/templates/content/pt-br/document/documentos-norteadores.html
@@ -1,5 +1,19 @@
 <div class="doc">
 
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="{{static_url}}/pdf/portaria_MMA_43.2014.pdf">
+                <img src="{{static_url}}/images/documentos/norteadores/noteadores443.png"/>
+                <div class="portfolio-overlay">
+                    <p>
+                    Portaria MMA 43/2014, Pró-espécies
+                    </p>
+
+                </div>
+            </a>
+        </div>
+    </div>
+
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
   <a href="{{static_url}}/pdf/portaria_mma_443_2014.pdf">
