--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -206,7 +206,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+            <a href="http://rdloyola.wix.com/cblab">
                 <img class="img-1" src="{{static_url}}/images/logos/biogeo.jpg" />
               </a>
             </li>
@@ -214,22 +214,22 @@
           <p>Apoio:</p>
           <ul>
             <li>
-              <a href="#">
+            <a href="https://www.thegef.org/gef/">
                 <img class="img-1" src="{{static_url}}/images/logos/gef.jpg" />
               </a>
             </li>
             <li>
-              <a href="#">
+            <a href="http://www.rj.gov.br/web/sea">
                 <img class="img-1" src="{{static_url}}/images/logos/sea.jpg" />
               </a>
             </li>
             <li>
-              <a href="#">
+            <a href="http://www.funbio.org.br/tfca-tropical-forest-conservation-act-2/">
                 <img class="img-1" src="{{static_url}}/images/logos/funbio.jpg" />
               </a>
             </li>
             <li>
-              <a href="#">
+            <a href="http://www.institutov5.com.br">
                 <img class="img-1" src="{{static_url}}/images/logos/v5.jpg" />
               </a>
             </li>
