Added books and highlights about espinhaco, grao mogol and guia de campo

--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -1,5 +1,52 @@
 
 <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
+          <div class="portfolio-overlay">
+            <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
+            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
+            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+            <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
+          <div class="portfolio-overlay">
+            <p>Flora ameaçada do Cerrado Mineiro - Guia de Campo
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
       <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >
@@ -55,6 +102,13 @@
           </p>
         </div>
       </a>
+    </div>
+  </div>
+</div>
+
+<div class="doc">
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img" style="border:none">
     </div>
   </div>
 </div>
