--- a/templates/home.html
+++ b/templates/home.html
@@ -81,6 +81,73 @@
 
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">
+                        Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
+                    </a>
+                </h3>
+                <p>O <i>Plano de Ação Nacional para a conservação da flora
+                    ameaçada de extinção da Serra do Espinhaço</i> contém uma série de
+                ações elaboradas para mitigar as ameaças que incidem em um
+                território definido onde ocorrem 256 espécies da flora
+                ameaçada, além de informações sobre aspectos ambientais,
+                socioeconômicos e histórico-culturais desse território, bem
+                como informações complementares disponíveis em um <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
+                </p>
+            </div>
+        </div>
+      </section>
+      <section class="col-sm-12 col-md-6 col-lg-6">
+        <div class="box post">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">
+                        Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
+                    </a>
+                </h3>
+                <p>O <i>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da
+                    região de Grão Mogol-Francisco Sá</i> contém uma série de ações
+                elaboradas para mitigar as ameaças que incidem em um território
+                definido onde ocorrem 74 espécies da flora ameaçada, além de
+                informações sobre aspectos ambientais, socioeconômicos e
+                histórico-culturais desse território, bem como informações
+                complementares disponíveis em um <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
+                </p>
+            </div>
+        </div>
+      </section>
+      <section class="col-sm-12 col-md-6 col-lg-6">
+        <div class="box post">
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
+            </a>
+          <div class="inner">
+              <h3>
+                  <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+                      Flora ameaçada do Cerrado Mineiro - Guia de Campo
+                  </a>
+              </h3>
+              <p><i>Flora ameaçada do Cerrado Mineiro - Guia de Campo</i> traz
+              informações redigidas em uma linguagem acessível à um público
+              amplo, não especialista em botânica, visando aumentar o
+              conhecimento sobre 82 espécies (64 Criticamente em perigo de
+              extinção e 18 com Dados insuficientes) do Cerrado de Minas
+              Gerais, além de auxiliar na implementação de ações de conservação
+              recomendadas nos Planos de Ação Nacional - PANs. 
+              </p>
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="col-sm-12 col-md-6 col-lg-6">
+        <div class="box post">
           <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
           <div class="inner">
             <h3><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf">Livro Vermelho da Flora do Brasil - Plantas Raras do Cerrado</a></h3>
@@ -88,20 +155,8 @@
               que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
               priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
               áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices
-              alarmantes.</p>
-          </div>
-        </div>
-      </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
-        <div class="box post">
-          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf" class="image left box-img"><img src="{{static_url}}/images/livrovermelho.png" alt="" /></a>
-          <div class="inner">
-            <h3><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">Livro Vermelho da Flora do Brasil</a></h3>
-    <p>
-      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
-            <br /><br />
-            <br /><br />
-            </p>
+              alarmantes.
+              <br><br></p>
           </div>
         </div>
       </section>
